--- a/internal/webfs/locales/en-US.json
+++ b/internal/webfs/locales/en-US.json
@@ -46,7 +46,11 @@
   },
   "config": {
     "title": "Configuration",
-    "subtitle": "Manage proxy server configuration parameters",
+    "subtitle": "Manage Claude Code proxy server configuration parameters",
+    "claude_config": "Claude Configuration",
+    "anthropic_auth_token": "Anthropic Auth Token",
+    "anthropic_base_url": "Anthropic Base URL",
+    "openai_compatible_config": "OpenAI Compatible API Configuration",
     "api_config": "API Configuration",
     "openai_api_key": "OpenAI API Key",
     "claude_api_key": "Claude API Key",
@@ -54,23 +58,63 @@
     "claude_base_url": "Claude Base URL",
     "test_api_key": "🔍 Test API Key",
     "openai_api_key_placeholder": "Enter OpenAI API Key",
+    "anthropic_auth_token_placeholder": "Enter Anthropic Auth Token",
+    "anthropic_base_url_placeholder": "https://api.anthropic.com",
     "claude_api_key_placeholder": "Enter Claude API Key",
+    "openai_base_url_placeholder": "https://api.openai.com/v1",
+    "claude_base_url_placeholder": "https://api.anthropic.com",
+    "claude_api_key_placeholder": "Enter Claude API Key",
+    "openai_base_url_placeholder": "https://api.openai.com/v1",
+    "claude_base_url_placeholder": "https://api.anthropic.com",
+    "big_model_placeholder": "gpt-4o",
+    "small_model_placeholder": "gpt-4o-mini",
+    "max_tokens_limit": "Max Tokens Limit",
+    "max_tokens_limit_placeholder": "4096",
+    "performance_config": "Performance Configuration",
+    "test_model": "🧪 Test",
+    "generate_random": "🎲 Generate",
+    "anthropic_auth_token_hint": "Authentication token for accessing Claude API",
+    "claude_config_desc": "Basic configuration settings for Claude API",
+    "openai_compatible_config_desc": "Configure OpenAI compatible API service (supports OpenAI, Azure, local models, etc.)",
+    "server_config_desc": "Server runtime and security related configuration",
+    "api_settings": "API Settings",
+    "model_mapping": "Model Mapping",
+    "performance_settings": "Performance Settings",
+    "server_settings": "Server Settings",
+    "security_settings": "Security Settings",
+    "openai_api_key_hint": "API key for target provider (OpenAI, Azure, Local models, etc.)",
+    "openai_base_url_hint": "Base URL for OpenAI compatible API",
+    "max_tokens_limit_hint": "Maximum number of tokens per request",
+    "request_timeout_hint": "API request timeout duration",
+    "openai_compatible_config_desc": "Configure OpenAI compatible API service (supports OpenAI, Azure, local models, etc.)",
+    "server_config_desc": "Server runtime and security related configuration",
+    "api_settings": "API Settings",
+    "model_mapping": "Model Mapping",
+    "performance_settings": "Performance Settings",
+    "server_settings": "Server Settings",
+    "security_settings": "Security Settings",
+    "anthropic_base_url_hint": "Automatically get Base URL from current page",
+    "big_model_hint": "Claude Sonnet and Opus requests will be mapped to this model",
+    "small_model_hint": "Claude Haiku requests will be mapped to this model",
+    "jwt_secret_hint": "Secret key for JWT token signing",
+    "max_tokens_placeholder": "4096",
+    "request_timeout_placeholder": "90",
+    "server_host_placeholder": "0.0.0.0",
+    "server_port_placeholder": "8080",
     "model_config": "Model Configuration",
     "big_model": "Big Model (Sonnet/Opus)",
     "small_model": "Small Model (Haiku)",
     "max_tokens": "Max Tokens Limit",
     "request_timeout": "Request Timeout (seconds)",
-    "performance_config": "Performance Configuration",
+    "server_config": "Server Configuration",
     "server_host": "Server Host",
     "server_port": "Server Port",
     "log_level": "Log Level",
     "stream_enabled": "Enable Stream Response",
     "security_config": "Security Configuration",
     "jwt_secret": "JWT Secret",
-    "db_encrypt_key": "Database Encryption Key",
     "encrypt_algo": "Encryption Algorithm",
     "jwt_secret_placeholder": "Enter JWT Secret",
-    "db_encrypt_key_placeholder": "Enter Database Encryption Key",
     "test_config": "Test Configuration",
     "save_config": "Save Configuration",
     "saving": "Saving...",
