--- a/internal/webfs/locales/zh-CN.json
+++ b/internal/webfs/locales/zh-CN.json
@@ -46,7 +46,11 @@
   },
   "config": {
     "title": "配置管理",
-    "subtitle": "管理代理服务器的配置参数",
+    "subtitle": "管理Claude Code代理服务器的配置参数",
+    "claude_config": "Claude配置",
+    "anthropic_auth_token": "Anthropic Auth Token",
+    "anthropic_base_url": "Anthropic Base URL",
+    "openai_compatible_config": "OpenAI兼容API配置",
     "api_config": "API配置",
     "openai_api_key": "OpenAI API Key",
     "claude_api_key": "Claude API Key",
@@ -54,23 +58,63 @@
     "claude_base_url": "Claude Base URL",
     "test_api_key": "🔍 测试API密钥",
     "openai_api_key_placeholder": "输入OpenAI API Key",
+    "anthropic_auth_token_placeholder": "输入Anthropic Auth Token",
+    "anthropic_base_url_placeholder": "https://api.anthropic.com",
     "claude_api_key_placeholder": "输入Claude API Key",
+    "openai_base_url_placeholder": "https://api.openai.com/v1",
+    "claude_base_url_placeholder": "https://api.anthropic.com",
+    "claude_api_key_placeholder": "输入Claude API Key",
+    "openai_base_url_placeholder": "https://api.openai.com/v1",
+    "claude_base_url_placeholder": "https://api.anthropic.com",
+    "big_model_placeholder": "gpt-4o",
+    "small_model_placeholder": "gpt-4o-mini",
+    "max_tokens_limit": "最大Token限制",
+    "max_tokens_limit_placeholder": "4096",
+    "performance_config": "性能配置",
+    "test_model": "🧪 测试",
+    "generate_random": "🎲 生成",
+    "anthropic_auth_token_hint": "用于访问Claude API的认证令牌",
+    "claude_config_desc": "Claude API的基本配置设置",
+    "openai_compatible_config_desc": "配置OpenAI兼容的API服务（支持OpenAI、Azure、本地模型等）",
+    "server_config_desc": "服务器运行和安全相关的配置",
+    "api_settings": "API设置",
+    "model_mapping": "模型映射",
+    "performance_settings": "性能设置",
+    "server_settings": "服务器设置",
+    "security_settings": "安全设置",
+    "openai_api_key_hint": "目标提供商的API密钥（OpenAI、Azure、本地模型等）",
+    "openai_base_url_hint": "OpenAI兼容API的基础URL",
+    "max_tokens_limit_hint": "单次请求的最大Token数量",
+    "request_timeout_hint": "API请求的超时时间",
+    "openai_compatible_config_desc": "配置OpenAI兼容的API服务（支持OpenAI、Azure、本地模型等）",
+    "server_config_desc": "服务器运行和安全相关的配置",
+    "api_settings": "API设置",
+    "model_mapping": "模型映射",
+    "performance_settings": "性能设置",
+    "server_settings": "服务器设置",
+    "security_settings": "安全设置",
+    "anthropic_base_url_hint": "自动获取当前页面的Base URL",
+    "big_model_hint": "Claude Sonnet和Opus请求将映射到此模型",
+    "small_model_hint": "Claude Haiku请求将映射到此模型",
+    "jwt_secret_hint": "用于JWT令牌签名的密钥",
+    "max_tokens_placeholder": "4096",
+    "request_timeout_placeholder": "90",
+    "server_host_placeholder": "0.0.0.0",
+    "server_port_placeholder": "8080",
     "model_config": "模型配置",
     "big_model": "大模型 (Sonnet/Opus)",
     "small_model": "小模型 (Haiku)",
     "max_tokens": "最大Token限制",
     "request_timeout": "请求超时 (秒)",
-    "performance_config": "性能配置",
+    "server_config": "服务器配置",
     "server_host": "服务器地址",
     "server_port": "服务器端口",
     "log_level": "日志级别",
     "stream_enabled": "启用流式响应",
     "security_config": "安全配置",
     "jwt_secret": "JWT密钥",
-    "db_encrypt_key": "数据库加密密钥",
     "encrypt_algo": "配置加密算法",
     "jwt_secret_placeholder": "输入JWT密钥",
-    "db_encrypt_key_placeholder": "输入数据库加密密钥",
     "test_config": "测试配置",
     "save_config": "保存配置",
     "saving": "保存中...",
