logs viewer and other options

--- a/internal/webfs/locales/en-US.json
+++ b/internal/webfs/locales/en-US.json
@@ -42,7 +42,20 @@
     "success": "Success",
     "failed": "Failed",
     "warning": "Warning",
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "details_title": "Request Details",
+    "loading_details": "Loading details...",
+    "basic_info": "Basic Information",
+    "request_id": "Request ID",
+    "timestamp": "Timestamp",
+    "duration": "Duration",
+    "tokens": "Token Usage",
+    "input": "Input",
+    "output": "Output",
+    "request_content": "Request Content",
+    "response_content": "Response Content",
+    "error_info": "Error Information",
+    "no_data": "No data available"
   },
   "config": {
     "title": "Configuration",
@@ -128,7 +141,28 @@
     "api_key_test_success": "✅ API key test successful!",
     "api_key_test_failed": "❌ API key test failed",
     "network_error": "❌ Network error",
-    "final_endpoint": "Final Endpoint:"
+    "final_endpoint": "Final Endpoint:",
+    "proxy_settings": "Proxy Settings",
+    "proxy_config": "Proxy Configuration",
+    "proxy_config_desc": "Configure HTTP or SOCKS5 proxy to access API services",
+    "enable_proxy": "Enable Proxy",
+    "proxy_type": "Proxy Type",
+    "proxy_type_http": "HTTP Proxy",
+    "proxy_type_socks5": "SOCKS5 Proxy",
+    "http_proxy": "HTTP Proxy Address",
+    "http_proxy_placeholder": "http://proxy.example.com:8080",
+    "http_proxy_hint": "HTTP proxy server address, format: http://host:port",
+    "socks5_proxy": "SOCKS5 Proxy Address",
+    "socks5_proxy_placeholder": "proxy.example.com:1080",
+    "socks5_proxy_hint": "SOCKS5 proxy server address, format: host:port",
+    "socks5_username": "SOCKS5 Username",
+    "socks5_username_placeholder": "Username (optional)",
+    "socks5_username_hint": "Username for SOCKS5 proxy (if authentication required)",
+    "socks5_password": "SOCKS5 Password",
+    "socks5_password_placeholder": "Password (optional)",
+    "socks5_password_hint": "Password for SOCKS5 proxy (if authentication required)",
+    "ignore_ssl": "Ignore SSL Verification",
+    "ignore_ssl_hint": "Skip SSL certificate verification (use only in test environments)"
   },
   "users": {
     "title": "User Management",
