--- a/internal/webfs/locales/zh-CN.json
+++ b/internal/webfs/locales/zh-CN.json
@@ -42,7 +42,20 @@
     "success": "成功",
     "failed": "失败",
     "warning": "警告",
-    "loading": "加载中..."
+    "loading": "加载中...",
+    "details_title": "请求详情",
+    "loading_details": "加载详情中...",
+    "basic_info": "基本信息",
+    "request_id": "请求ID",
+    "timestamp": "时间戳",
+    "duration": "响应时间",
+    "tokens": "Token使用",
+    "input": "输入",
+    "output": "输出",
+    "request_content": "请求内容",
+    "response_content": "响应内容",
+    "error_info": "错误信息",
+    "no_data": "暂无数据"
   },
   "config": {
     "title": "配置管理",
@@ -128,7 +141,28 @@
     "api_key_test_success": "✅ API密钥测试成功！",
     "api_key_test_failed": "❌ API密钥测试失败",
     "network_error": "❌ 网络错误",
-    "final_endpoint": "最终端点："
+    "final_endpoint": "最终端点：",
+    "proxy_settings": "代理设置",
+    "proxy_config": "代理配置",
+    "proxy_config_desc": "配置HTTP或SOCKS5代理以访问API服务",
+    "enable_proxy": "启用代理",
+    "proxy_type": "代理类型",
+    "proxy_type_http": "HTTP代理",
+    "proxy_type_socks5": "SOCKS5代理",
+    "http_proxy": "HTTP代理地址",
+    "http_proxy_placeholder": "http://proxy.example.com:8080",
+    "http_proxy_hint": "HTTP代理服务器地址，格式：http://host:port",
+    "socks5_proxy": "SOCKS5代理地址",
+    "socks5_proxy_placeholder": "proxy.example.com:1080",
+    "socks5_proxy_hint": "SOCKS5代理服务器地址，格式：host:port",
+    "socks5_username": "SOCKS5用户名",
+    "socks5_username_placeholder": "用户名（可选）",
+    "socks5_username_hint": "SOCKS5代理的用户名（如果需要认证）",
+    "socks5_password": "SOCKS5密码",
+    "socks5_password_placeholder": "密码（可选）",
+    "socks5_password_hint": "SOCKS5代理的密码（如果需要认证）",
+    "ignore_ssl": "忽略SSL验证",
+    "ignore_ssl_hint": "跳过SSL证书验证（仅在测试环境使用）"
   },
   "users": {
     "title": "用户管理",
