--- a/internal/webfs/locales/en-US.json
+++ b/internal/webfs/locales/en-US.json
@@ -190,13 +190,22 @@
     "add_user_modal": "Add User",
     "edit_user_modal": "Edit User",
     "password": "Password",
+    "password_optional": "Leave blank to keep current password",
+    "password_required": "Please enter password",
     "enable_user": "Enable User",
     "cancel": "Cancel",
     "save": "Save",
     "user_saved": "User saved successfully",
+    "user_created": "User created successfully",
+    "user_updated": "User updated successfully",
     "user_deleted": "User deleted successfully",
     "confirm_delete": "Are you sure you want to delete this user?",
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "no_users": "No users found",
+    "username_required": "Username is required",
+    "email_required": "Email is required",
+    "role_required": "Please select a valid user role",
+    "password_update_note": "Password updates must be done by the user"
   },
   "test": {
     "title": "API Testing",
@@ -259,6 +268,7 @@
     "confirm": "Confirm",
     "cancel": "Cancel",
     "save": "Save",
+    "saving": "Saving...",
     "edit": "Edit",
     "delete": "Delete",
     "add": "Add",
@@ -269,7 +279,10 @@
     "network_error": "Network error",
     "unknown_error": "Unknown error",
     "operation_success": "Operation successful",
-    "operation_failed": "Operation failed"
+    "operation_failed": "Operation failed",
+    "previous": "Previous",
+    "next": "Next",
+    "page_info": "Page {page} of {pages}, Total {total} records"
   },
   "menu": {
     "dashboard": "Dashboard",
@@ -328,7 +341,8 @@
     "username_exists": "Username already exists",
     "admin_exists": "Admin user already exists",
     "password_mismatch": "Password mismatch",
-    "invalid_credentials": "Invalid credentials",
+    "invalid_credentials": "Invalid username or password",
+    "account_disabled": "Account is disabled",
     "config_not_found": "Configuration not found",
     "config_invalid": "Invalid configuration",
     "api_key_invalid": "Invalid API key",
