--- a/internal/webfs/locales/zh-CN.json
+++ b/internal/webfs/locales/zh-CN.json
@@ -190,13 +190,22 @@
     "add_user_modal": "添加用户",
     "edit_user_modal": "编辑用户",
     "password": "密码",
+    "password_optional": "留空则不修改密码",
+    "password_required": "请输入密码",
     "enable_user": "启用用户",
     "cancel": "取消",
     "save": "保存",
     "user_saved": "用户保存成功",
+    "user_created": "用户创建成功",
+    "user_updated": "用户更新成功",
     "user_deleted": "用户删除成功",
     "confirm_delete": "确定要删除这个用户吗？",
-    "loading": "加载中..."
+    "loading": "加载中...",
+    "no_users": "暂无用户",
+    "username_required": "用户名不能为空",
+    "email_required": "邮箱不能为空",
+    "role_required": "请选择有效的用户角色",
+    "password_update_note": "密码更新需要用户自行修改"
   },
   "test": {
     "title": "API测试",
@@ -259,6 +268,7 @@
     "confirm": "确认",
     "cancel": "取消",
     "save": "保存",
+    "saving": "保存中...",
     "edit": "编辑",
     "delete": "删除",
     "add": "添加",
@@ -269,7 +279,10 @@
     "network_error": "网络错误",
     "unknown_error": "未知错误",
     "operation_success": "操作成功",
-    "operation_failed": "操作失败"
+    "operation_failed": "操作失败",
+    "previous": "上一页",
+    "next": "下一页", 
+    "page_info": "第{page}页，共{pages}页，总计{total}条记录"
   },
   "menu": {
     "dashboard": "仪表板",
@@ -328,7 +341,8 @@
     "username_exists": "用户名已存在",
     "admin_exists": "管理员用户已存在",
     "password_mismatch": "密码不匹配",
-    "invalid_credentials": "无效凭据",
+    "invalid_credentials": "用户名或密码错误",
+    "account_disabled": "账户已被禁用",
     "config_not_found": "配置未找到",
     "config_invalid": "无效配置",
     "api_key_invalid": "无效API密钥",
